--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             "pageLength": 25,
             "lengthMenu": [ [25, 50, 100, -1], [25, 50, 100, "Todos"] ],
             "order": [],
+            "ordering": true,
             "dom": 'lftrip'  // Mostrar buscador y selector arriba
         });
     });
